--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -193,11 +193,10 @@
 
     <!-- SECCION FOOTER -->
     <footer>
-        <p>Todos los derechos reservados - 2022</p>
+        <p>Todos los derechos reservados - 2023</p>
         <div class="redes">
-            <a href="#"><i class="fa-brands fa-youtube"></i></a>
-            <a href="#"><i class="fa-brands fa-facebook"></i></a>
-            <a href="#"><i class="fa-brands fa-instagram-square"></i></a>
+            <a href="https://github.com/AgusLivi"><i class="fa-brands fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/agustin-livini/"><i class="fa-brands fa-linkedin"></i></a>
         </div>
 
     </footer>
